--- a/flutter_essencial/android/app/build.gradle
+++ b/flutter_essencial/android/app/build.gradle
@@ -60,4 +60,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
